--- a/Lysn_userdbkey/readme
+++ b/Lysn_userdbkey/readme
@@ -1,2 +1,1 @@
-https://sejun-notebook.notion.site/How-to-make-user-db-key-5c8cb4a4e13b428e82e60f8b76fd4e5a
-해당 어셈블리어를 그대로 파이썬으로 옮겼습니다
+Lysn에 있는 organization.so를 어셈블리어를 참고하여 그대로 파이썬으로 옮겼습니다
