--- a/Masterkey/readme
+++ b/Masterkey/readme
@@ -1,4 +1,4 @@
 Cryptomator에 쓰이는 masterkey를 생성하는 코드입니다
 
 
-This is Code that generate masterkey for Cryptomator.
+This code that generates masterkey for Cryptomator.
